# Projet-Prediction-des-Incendies

./: .gitignore  Guide Utilisateur.pages  README.md  pyproject.toml
app/: .env  README.md  main.py  requirements.txt
app/api/: __init__.py  endpoints.py  middleware.py
app/chatbot/: __init__.py  audit_state.py  flameo.py  questions.py  report.py
app/core/: __init__.py  config.py  logging.py  utils.py
app/interface/: gradio_app.py
app/models/: __init__.py  risk_item.py  schemas.py
app/routers/: __init__.py  items.py
app/routes/: __init__.py  scan_environment.py
app/services/: __init__.py  audit_service.py  detection_service.py
static/: script.js  style.css
templates/: audit.html  index.html
test_env/: pyvenv.cfg
tests/: test_integration.py  test_unit.py
