[project]
name = "Projet-Prediction-des-Incendies"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hugo-Mallia", email = "hugo.mallia@clsi.fr"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2", "jinja2>=3.1.6", "python-multipart>=0.0.20", "opencv-python>=4.11.0.86", "numpy>=2.2.5", "pydantic>=2.11.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "uvicorn>=0.34.2",
]
