[project]
name = "Projet-Prediction-des-Incendies"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hugo-Mallia", email = "hugo.mallia@clsi.fr"},
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "opencv-python>=4.11.0.86",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "httpx>=0.24.0",
    "gradio>=5.29.1",
    "langchain>=0.3.25",
    "openai>=1.79.0",
    "langchain-community>=0.3.",  
    "langchain-openai>=0.3.17"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest"

[dependency-groups]
dev = [
    "uvicorn>=0.34.2",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]
